# dpp-paper-demo

./: LICENSE  README.md  main.ipynb  pyproject.toml
tmp/lancedb/movies.lance/_transactions/: 0-569436cc-fddb-4cd9-b80b-4c592dcc2d61.txn
tmp/lancedb/movies.lance/data/: c437e56a-1265-4293-864b-8346262f1e4a.lance
