[project]
name = "dpp-paper-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dppy==0.3.3",
    "ipykernel>=6.29.5",
    "lancedb>=0.24.1",
    "numpy>=1.26.4",
    "pandas>=2.3.1",
    "pyarrow>=20.0.0",
    "sentence-transformers>=5.0.0",
    "tensorflow-datasets>=4.9.9",
    "tensorflow-macos>=2.16.2",
    "tensorflow-recommenders>=0.7.3",
    "tf-keras>=2.16.0",
]
